<resources>
    <string name="app_name">IWaseet</string>
    <string name="client">Client</string>
    <string name="service_provider">Service Provider</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="registration">Registration</string>
    <string name="nameRequired">* Name</string>
    <string name="locationRequired">Location</string>
    <string name="shopNameRequired">Shop Name</string>
    <string name="mobileRequired">Mobile</string>
    <string name="emailRequired">Email</string>
    <string name="photo">Photo</string>
    <string name="confirmationCodeRequired">* Confirmation Code</string>
    <string name="passwordRequired">Password</string>
    <string name="newPasswordRequired">New Password</string>
    <string name="oldPasswordRequired">Old Password</string>
    <string name="reTypePasswordRequired">* Re-type Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="nameErrorMsg">Name at least 4 character</string>
    <string name="mobileErrorMsg">Mobile at least 9 character</string>
    <string name="emailErrorMsg">Invalid email</string>
    <string name="passwordErrorMsg">Password at least 6 character</string>
    <string name="passwordNotMatched">Password Not Matched</string>
    <string name="loading">Loading...</string>
    <string name="invalidUser">Invalid User</string>
    <string name="invalidActivationCode">Invalid Activation Code</string>
    <string name="activationCodeHasBeenSent">Activation code has been sent</string>
    <string name="search">Search</string>
    <string name="connectionError">Connection Error</string>
    <string name="km">KM</string>
    <string name="m">M</string>
    <string name="distance">Distance</string>
    <string name="call">Call</string>
    <string name="calls">Calls</string>
    <string name="rate">Rate</string>
    <string name="reviews">Reviews</string>
    <string name="complain">Complain</string>
    <string name="workingHours">Working Hours</string>
    <string name="request">Request</string>
    <string name="requests">Requests</string>
    <string name="addAComplain">Add a complain</string>
    <string name="priceList">Price List</string>
    <string name="updateCategories">Update Categories</string>
    <string name="categories">Categories</string>
    <string name="noCommentsAvailable">No Comments Available</string>
    <string name="noRequestsAvailable">No Requests Available</string>
    <string name="noResultFound">No Result Found</string>
    <string name="send">Send</string>
    <string name="requestSent">Request has been sent</string>
    <string name="complainSent">Complain has been sent</string>
    <string name="rs">R.S</string>
    <string name="notAllowToCall">Not Allow To Call</string>
    <string name="answered">Answered</string>
    <string name="notAnswered">Not Answered</string>
    <string name="busy">Busy</string>
    <string name="rateSent">Rate has been sent</string>
    <string name="updateProfile">Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="updateHoursWork">Update Hours Work</string>
    <string name="camera">Camera</string>
    <string name="gallary">Gallary</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="day">Day</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="daysOff">Days Off</string>
    <string name="shareApp">Share Application</string>
    <string name="signOut">Sign Out</string>
    <string name="shareVia">Share via</string>
    <string name="news">News</string>
    <string name="byDistance">By Distance</string>
    <string name="byRate">By Rate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="language">Language</string>

    <string name="socialMedia">Social Media</string>
    <string name="url">URL</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteMessage">Are you sure delete this?</string>
    <string name="doneLocationSelected">Done Location Selected</string>
    <string name="location">Location</string>
    <string name="updateMap">Update Map</string>
    <string name="updateShop">Update Shop</string>
    <string name="details">Details</string>
    <string name="contin">Continue</string>
    <string name="skip">Skip</string>
    <string name="new_user">New User</string>

</resources>
