<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client_registration_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ash.wasset.activities.ClientRegistrationActivity">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lieghtBlue" >

        <ash.wasset.views.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePassword"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/s20"
            android:textColor="@color/white"
            android:layout_margin="@dimen/d5"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/d30"
            android:layout_marginRight="@dimen/d30"
            android:layout_marginTop="@dimen/d40">

            <ash.wasset.views.MyEditText
                android:id="@+id/oldPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/oldPasswordRequired"
                android:gravity="center"
                android:textColorHint="@color/lieghtBlue"
                android:textColor="@color/blue"
                android:textSize="@dimen/s18"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/d10" />

            <ash.wasset.views.MyEditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPasswordRequired"
                android:gravity="center"
                android:textColorHint="@color/lieghtBlue"
                android:textColor="@color/blue"
                android:textSize="@dimen/s18"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/d10" />

            <ash.wasset.views.MyEditText
                android:id="@+id/reTypePasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reTypePasswordRequired"
                android:gravity="center"
                android:textColorHint="@color/lieghtBlue"
                android:textColor="@color/blue"
                android:textSize="@dimen/s18"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/d10" />

            <ash.wasset.views.MyButton
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:text="@string/update"
                android:textSize="@dimen/s20"
                android:layout_marginTop="@dimen/d20"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>