<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/client_registration_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ash.wasset.activities.ClientRegistrationActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/d130"
        android:layout_height="@dimen/d20"
        android:visibility="gone"
        android:src="@mipmap/logo_text"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/d10" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:layout_marginTop="@dimen/d40" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/d30"
            android:layout_marginRight="@dimen/d30" >

            <ash.wasset.views.MyEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameRequired"
                android:gravity="center"
                android:textColorHint="@color/lieghtBlue"
                android:textColor="@color/blue"
                android:textSize="@dimen/s18"
                android:inputType="text"
                android:layout_marginBottom="@dimen/d10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ash.wasset.views.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:text="+966"
                    android:textSize="@dimen/s18" />

                <ash.wasset.views.MyEditText
                    android:id="@+id/mobileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobileRequired"
                    android:gravity="center"
                    android:textColorHint="@color/lieghtBlue"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/s18"
                    android:inputType="number"
                    android:layout_marginBottom="@dimen/d10"
                    android:paddingEnd="@dimen/d30"/>

            </LinearLayout>

            <ash.wasset.views.MyEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailRequired"
                android:gravity="center"
                android:textColorHint="@color/lieghtBlue"
                android:textColor="@color/blue"
                android:textSize="@dimen/s18"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="@dimen/d10" />

            <LinearLayout
                android:id="@+id/photoLayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/d25"
                    android:layout_height="@dimen/d25"
                    android:src="@drawable/ic_person"
                    android:background="@color/lieghtBlue"
                    android:layout_margin="@dimen/d5"/>

                <ash.wasset.views.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"
                    android:gravity="center"
                    android:textColor="@color/lieghtBlue"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginBottom="@dimen/d10"
                android:layout_marginLeft="@dimen/d5"
                android:layout_marginRight="@dimen/d5" />

            <ash.wasset.views.MyEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordRequired"
                android:gravity="center"
                android:textColorHint="@color/lieghtBlue"
                android:textColor="@color/blue"
                android:textSize="@dimen/s18"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/d10" />

            <ash.wasset.views.MyEditText
                android:id="@+id/reTypePasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reTypePasswordRequired"
                android:gravity="center"
                android:textColorHint="@color/lieghtBlue"
                android:textColor="@color/blue"
                android:textSize="@dimen/s18"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/d10" />

            <ash.wasset.views.MyEditText
                android:id="@+id/shopNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shopNameRequired"
                android:gravity="center"
                android:textColorHint="@color/lieghtBlue"
                android:textColor="@color/blue"
                android:textSize="@dimen/s18"
                android:inputType="text"
                android:layout_marginBottom="@dimen/d10" />

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/d25"
                    android:layout_height="@dimen/d25"
                    android:src="@drawable/ic_location"
                    android:background="@color/lieghtBlue"
                    android:layout_margin="@dimen/d5"/>

                <ash.wasset.views.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locationRequired"
                    android:gravity="center"
                    android:textColor="@color/lieghtBlue" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginBottom="@dimen/d10"
                android:layout_marginLeft="@dimen/d5"
                android:layout_marginRight="@dimen/d5" />

            <ash.wasset.views.MyButton
                android:id="@+id/registrationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:background="@mipmap/confirm_ok"
                android:textColor="@color/white"
                android:textSize="@dimen/s20"
                android:layout_marginTop="@dimen/d30"/>


        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
